--- a/app/globals.css
+++ b/app/globals.css
@@ -15,7 +15,28 @@
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  color: var(--background);
+  background: var(--foreground);
+  font-family: var(--font-onest), sans-serif;
+}
+
+h1,
+h2,
+h3 {
+  font-family: var(--font-outfit), sans-serif;
+}
+
+@layer base {
+  .flex-between {
+    @apply flex items-center justify-between;
+  }
+  .flex-center {
+    @apply flex items-center justify-center;
+  }
+  .flex-col-center {
+    @apply flex flex-col justify-center items-center;
+  }
+  .flex-col-start {
+    @apply flex flex-col items-start;
+  }
 }
