--- a/app/globals.css
+++ b/app/globals.css
@@ -18,6 +18,7 @@ body {
   color: var(--background);
   background: var(--foreground);
   font-family: var(--font-onest), sans-serif;
+  font-weight: 400;
 }
 
 h1,
@@ -39,4 +40,12 @@ h3 {
   .flex-col-start {
     @apply flex flex-col items-start;
   }
+}
+
+.font-outfit {
+  font-family: var(--font-outfit);
+}
+
+.font-onest {
+  font-family: var(--font-onest);
 }
