--- a/app/globals.css
+++ b/app/globals.css
@@ -49,3 +49,15 @@ h3 {
 .font-onest {
   font-family: var(--font-onest);
 }
+
+.custom-cursor {
+  position: fixed;
+  width: 50px;
+  height: 50px;
+  background-color: #ffd761;
+  border-radius: 50%;
+  pointer-events: none;
+  transform: translate(-50%, -50%);
+  transition: transform 0.3s linear;
+  z-index: 1000;
+}
