--- a/app/globals.css
+++ b/app/globals.css
@@ -66,7 +66,7 @@ h3 {
 }
 
 /* Animations for horizontal and vertical scrolling */
-@keyframes scrollHorizontal {
+/* @keyframes scrollHorizontal {
   from {
     transform: translateX(0);
   }
@@ -99,9 +99,9 @@ h3 {
 }
 
 /* Make sure the container respects height on mobile */
-@media (max-width: 767px) {
+/* @media (max-width: 767px) {
   .vertical-scroll-animation {
     max-height: 80vh;
     height: auto;
   }
-}
+}  */
